# AC-Group-Guide

./: .firebaserc  .gitignore  LICENSE  README.md  firebase.json
AC-Group-UI/: .firebaserc  .gitignore  Dockerfile  README.md  angular.json  firebase.json  karma.conf.js  package.json  tslint.json
AC-Group-UI/e2e/src/: app.e2e-spec.ts
AC-Group-UI/nginx/: default.conf
AC-Group-UI/src/: index.html  styles.scss
AC-Group-UI/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
AC-Group-UI/src/app/Interceptors/: http-client.interceptor.ts
AC-Group-UI/src/app/Models/: admin-response.model.ts  animal.model.ts  art.model.ts  bug.model.ts  collectable.model.ts  fish.model.ts  fossil.model.ts  group.model.ts  items.model.ts  (+3 more)
AC-Group-UI/src/environments/: environment.firebase.ts  environment.prod.ts  environment.ts
AC-Guide-API/: .env  Cargo.toml  Dockerfile  Rocket.toml
AC-Guide-API/migrations/2020-05-03-214042_initSchema/: down.sql  up.sql
AC-Guide-API/migrations/2020-05-04-211447_seedData/: down.sql  up.sql
AC-Guide-API/src/: acRole.rs  acUser.rs  ac_role.rs  ac_user.rs  api_responder.rs  auth.rs  collectable.rs  collectableType.rs  collectable_type.rs  collectedItem.rs  collected_item.rs  constants.rs  db.rs  group.rs  main.rs  schema.rs
DataScript/: allInOneDocFirestore.py  generateData.py  items  migration.py  requirements.txt  seedFirestore.py  seedPostgres.py  up.sql
DataScript/Results/: data.json
functions/: README.md  package-lock.json  package.json  tslint.json
functions/src/: index.ts
(+51 files in other folders)
