[package]
name = "AC-Guide-API"
version = "0.1.0"
authors = ["Domenic Perriccioli <domperriccioli@hotmail.com>", "Trevor Vanderee <tvand08@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
r2d2 = "*"
r2d2-diesel = "*"