[package]
name = "ac_guide_api"
version = "0.1.0"
authors = ["Domenic Perriccioli <domperriccioli@hotmail.com>", "Trevor Vanderee <tvand08@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.4", features = ["tls"] }
rocket_cors = "0.5.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.15.0"
r2d2 = "*"
r2d2-diesel = "*"
base64 = "0.12.1"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
openssl = "0.10.29"
rand = "0.7.3"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]